[gd_scene load_steps=6 format=3 uid="uid://ng2ml31k6uhf"]

[ext_resource type="Script" path="res://src/units/melee_unit.gd" id="1_vl7n3"]
[ext_resource type="Texture2D" uid="uid://ce786en8ql3ui" path="res://assets/icons/sword.png" id="2_np7h3"]
[ext_resource type="Texture2D" uid="uid://0fasvutovcm" path="res://assets/ranks/rank_1.png" id="3_2gxpw"]
[ext_resource type="StyleBox" uid="uid://mvv732gy1ops" path="res://src/ui/health_bar_fill_red.tres" id="4_lqsyh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_17boe"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="MeleeUnit" type="Node2D"]
script = ExtResource("1_vl7n3")

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_np7h3")

[node name="RankIcon" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-10, -10)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_2gxpw")

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -12.0
offset_top = 15.0
offset_right = 12.0
offset_bottom = 21.0
theme_override_styles/background = SubResource("StyleBoxFlat_17boe")
theme_override_styles/fill = ExtResource("4_lqsyh")
max_value = 1.0
value = 0.5
show_percentage = false
